fix(site): added table gaps in md pages; added table container for scrolling on mobile devices

--- a/packages/esl-website/src/common/colors.less
+++ b/packages/esl-website/src/common/colors.less
@@ -31,6 +31,8 @@
 @nav-dark-selected: #00a2ff;
 @nav-dark-accent: #3eb2ff;
 
+@outline-light: rgba(0, 0, 0, 0.1);
+
 @success: #02b048;
 @warning: #ffad24;
 @danger: #dc3545;
